[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytoon"
version = "0.1.0"
description = "TOON (Token-Oriented Object Notation) serializer & parser for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

authors = [
  { name="Akash Wankhede", email="akash.wankhede.pune@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
]

keywords = ["toon", "serialization", "parser", "format", "llm", "data"]

[project.urls]
Homepage = "https://github.com/akash1551/pytoon"
Source = "https://github.com/akash1551/pytoon"
Issues = "https://github.com/akash1551/pytoon/issues"
